Unit test project: remove casts that were added by the IDE

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /.vs
-/AwaitMultiple.Tests/bin
-/AwaitMultiple.Tests/obj
+bin
+obj
