--- a/AwaitMultiple/AwaitMultiple.csproj
+++ b/AwaitMultiple/AwaitMultiple.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Version>1.0.2</Version>
+		<Version>1.0.3</Version>
 		<Description>Await multiple tasks in parallel and get their return values with concise code.</Description>
 		<PackageProjectUrl>https://github.com/Symbolinker/AwaitMultiple#readme</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Symbolinker/AwaitMultiple#readme</RepositoryUrl>
 		<PackageTags>async; await; multiple; tasks; task; return; value; values; parallel</PackageTags>
 		<Copyright>Symbolinker</Copyright>
+		<Authors>Symbolinker and other contributors</Authors>
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -16,6 +17,7 @@
 		<PackageReleaseNotes>
 			v1.0.1: improve exception handling.
 			v1.0.2: improve handling cancellation exceptions and use `.ConfigureAwait(false)`.
+			v1.0.3: use `.ConfigureAwait(false)` on all `await`s.
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
