--- a/AwaitMultiple/AwaitMultiple.csproj
+++ b/AwaitMultiple/AwaitMultiple.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 		<Description>Await multiple tasks in parallel and get their return values with concise code.</Description>
 		<PackageProjectUrl>https://github.com/Symbolinker/AwaitMultiple#readme</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Symbolinker/AwaitMultiple#readme</RepositoryUrl>
@@ -19,6 +19,7 @@
 			v1.0.2: improve handling cancellation exceptions and use `.ConfigureAwait(false)`.
 			v1.0.3: use `.ConfigureAwait(false)` on all `await`s.
 			v2.0.0: rename `await tasks(..)` to `await Tasks(..)` to allow using a `tasks` variable and the `Tasks` method in the same scope.
+			v2.1.0: [new feature] await tasks with and without return value together.
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
