--- a/AwaitMultiple/AwaitMultiple.csproj
+++ b/AwaitMultiple/AwaitMultiple.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Version>5.0.0</Version>
+		<Version>6.0.0</Version>
 		<Description>Await multiple tasks in parallel and get their return values with concise code.</Description>
 		<PackageProjectUrl>https://github.com/Symbolinker/AwaitMultiple#readme</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/Symbolinker/AwaitMultiple#readme</RepositoryUrl>
@@ -25,6 +25,7 @@
 			v4.0.0: change the default exception handling behaviour to "throwing only the first exception" (as is usual in the C# language) and introduce the optional `exceptionOption` parameter that can be set to `ExceptionOption.Aggregate' for always getting an `AggregateException` if any task throws.
 			v4.0.1: add `.ConfigureAwait(continueOnCapturedContext)` at missed spots + update readme.
 			v5.0.0: delete the `continueOnCapturedContext` parameter and always use `false` inside the library.
+			v6.0.0: improve instruction for `ExceptionOption.Aggregate` in readme and rename `global using static AwaitMultiple.__Await;` (using 2 underscores to prevent IntelliSense from advising to use the `__Await` class when typing `await` when having `ExceptionOption.Aggregate` via a using of its namespace at the top of the file).
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
